# carrot-win

./: CMakeLists.txt  GEMINI.md  vcpkg.json
carrot/: CMakeLists.txt
carrot/include/carrot/: carrot.hpp
carrot/src/: carrot.cpp
carrot/tests/: CMakeLists.txt  carrot_test.cpp
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/memlock_20260316/: plan.md
conductor/tracks/memlock_20260316/: index.md  metadata.json  plan.md  spec.md
memlock/: CMakeLists.txt
memlock/include/memlock/: memlock.hpp
memlock/src/: memlock.cpp
memlock/tests/: CMakeLists.txt  memlock_test.cpp
